--- a/fisegoogle/res/layout/activity_main.xml
+++ b/fisegoogle/res/layout/activity_main.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
- 	android:orientation="vertical"
- 	android:layout_width="fill_parent"
- 	android:layout_height="fill_parent">
-	<Button
- 		android:layout_width="wrap_content"
-		 android:layout_height="wrap_content"
- 		android:text="Go to Activity Two"
- 		android:id="@+id/btnActTwo">
-	</Button>
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"> 
+    
+    <!-- Show on Map button -->
+    <Button android:id="@+id/btn_show_map"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Показать на карте"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dip"/>
+    
+    <!--  List view -->
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_show_map"/>
+    
+    
+ 
+</RelativeLayout>
