--- a/fisegoogle/res/layout/activity_map.xml
+++ b/fisegoogle/res/layout/activity_map.xml
@@ -8,10 +8,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MapActivity" >
     
+    <TextView
+        android:id="@+id/tv_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    
     <fragment 
         android:id="@+id/map"
         android:layout_width="match_parent"
     	android:layout_height="match_parent"
+    	android:layout_below="@id/tv_location"
     	android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 </RelativeLayout>
