--- a/fisegoogle/res/menu/main.xml
+++ b/fisegoogle/res/menu/main.xml
@@ -1,16 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
     
-    <item
-        android:id="@+id/action_exit"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_exit"/>
-    
+    <item 
+        android:id="@+id/menu_settings"
+        android:title="@string/menu_settings"
+        android:orderInCategory="100" />
 
 </menu>
