--- a/fisegoogle/res/layout/activity_map.xml
+++ b/fisegoogle/res/layout/activity_map.xml
@@ -2,10 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MapActivity" >
     
     <TextView
@@ -13,11 +9,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     
-    <fragment 
+    <fragment
         android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:layout_below="@id/tv_location"
-    	android:name="com.google.android.gms.maps.SupportMapFragment" />
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
