--- a/fisegoogle/res/layout/activity_map.xml
+++ b/fisegoogle/res/layout/activity_map.xml
@@ -13,7 +13,6 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
