--- a/fisegoogle/res/layout/dashboard_icon.xml
+++ b/fisegoogle/res/layout/dashboard_icon.xml
@@ -21,6 +21,6 @@
        android:layout_marginTop="2.0dip"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
-       android:textColor="@android:color/black" />
+       android:textColor="@android:color/white" />
  
 </LinearLayout>
