--- a/fisegoogle/res/layout/activity_main.xml
+++ b/fisegoogle/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"> 
+    android:orientation="vertical"
+    android:background = "#ffffff"> 
     
     <!-- Show on Map button -->
     <Button android:id="@+id/btn_show_map"
@@ -10,14 +11,15 @@
         android:layout_height="wrap_content"
         android:text="Показать на карте"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dip"/>
+        android:background="#59C8FF" 
+        android:textColor="@android:color/white" />
     
     <!--  List view -->
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_show_map"/>
+        android:layout_below="@id/btn_show_map" />
     
     
  
