fix list of places (add addres of places)

--- a/fisegoogle/res/layout/list_item.xml
+++ b/fisegoogle/res/layout/list_item.xml
@@ -13,7 +13,17 @@
     <TextView android:id="@+id/name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="10dip"
+        android:paddingTop="10dip"
+        android:paddingLeft="10dip"
+        android:paddingRight="10dip"
+        android:paddingBottom="5dip"
         android:textStyle="bold"
         android:textSize="16dip"/>
+    
+    <TextView android:id="@+id/vicinity"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dip"
+        android:paddingBottom="10dip"
+        android:textSize="13dip"/>
 </LinearLayout>
