fix actionbar (transparent)

--- a/fisegoogle/res/layout/single_place.xml
+++ b/fisegoogle/res/layout/single_place.xml
@@ -51,6 +51,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dip"
         android:layout_marginBottom="5dip"/>
+    
+    <Button android:id="@+id/btn_show_map"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Показать на карте"
+        android:layout_alignParentTop="true"
+        android:background="#59C8FF" 
+        android:textColor="@android:color/white" />
    
 
 
