--- a/fisegoogle/res/layout/dashboard.xml
+++ b/fisegoogle/res/layout/dashboard.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent"
-   android:background="#59C8FF">
+   android:layout_width="match_parent"
+   android:layout_height="match_parent"
+   android:background="#59C8FF"
+   android:paddingTop="?android:attr/actionBarSize">
  
     <GridView
        android:id="@+id/dashboard_grid"
