--- a/fisegoogle/res/values/styles.xml
+++ b/fisegoogle/res/values/styles.xml
@@ -4,9 +4,20 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="CustomActionBarTheme" parent="android:style/Theme.Holo.Light">
         <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
     </style>
+    
+    <style name="MyActionBar"
+           parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:background">#99000000</item>
+        <item name="android:titleTextStyle">@style/TitleTextStyle</item>
+    </style>
+    
+    <style name="TitleTextStyle" parent="@android:style/Widget.Holo.ActionBar" >
+     	<item name="android:textColor">#ffffff</item>
+	</style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
@@ -16,5 +27,6 @@
     <style name="dashboard">
         <item name="android:numColumns">2</item>
     </style>
+    
 
 </resources>
