--- a/fisegoogle/res/layout/dashboard_icon.xml
+++ b/fisegoogle/res/layout/dashboard_icon.xml
@@ -20,7 +20,7 @@
        android:layout_marginBottom="20.0dip"
        android:layout_marginTop="2.0dip"
        android:gravity="center"
-       android:textAppearance="?android:textAppearanceMedium"
+       android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/white" />
  
 </LinearLayout>
