--- a/fisegoogle/res/values/styles.xml
+++ b/fisegoogle/res/values/styles.xml
@@ -4,6 +4,8 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
+    
+    <!-- MapActivity theme. -->
     <style name="CustomActionBarTheme" parent="android:style/Theme.Holo.Light">
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:actionBarStyle">@style/MyActionBar</item>
@@ -21,7 +23,13 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:actionBarStyle">@style/AppActionBar</item>
+    </style>
+    
+    <style name="AppActionBar"
+           parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:background">#fc4349</item>
+        <item name="android:titleTextStyle">@style/TitleTextStyle</item>
     </style>
     
     <style name="dashboard">
